[gd_scene load_steps=8 format=2]

[ext_resource path="res://Kasuki Hand Normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://lavender.png" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0, 0, 0, 0.392157 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 0.392157 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 0.392157 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -89.5
margin_right = 298.0
margin_bottom = 89.5
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 596.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "LAVENDER HOLLOW"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 596.0
margin_bottom = 203.0

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 596.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_fonts/font = SubResource( 4 )
text = "Start Game"

[node name="Credits" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 596.0
margin_bottom = 96.0
rect_min_size = Vector2( 250, 46 )
custom_fonts/font = SubResource( 4 )
text = "Credits"

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 596.0
margin_bottom = 120.0
text = "v 0.1.1"
align = 1

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -265.0
margin_right = 450.0
margin_bottom = 265.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
margin_top = 25.0
margin_right = 900.0
margin_bottom = 475.0
rect_min_size = Vector2( 900, 450 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]A game by shadybug

Special thanks for guest ghosts:
Revenorror - Qyllia's ghost
Andrea M. - Logan's ghost

Doorway model, fence model, and most environment tiles from Kenney.nl

Font - Kasuki Hand Normal by Alejandro Zapata

Godot-Ink plugin by Paul Joannon

And, of course, thanks to Inkle and the Godot Team for creating the tools I used to make this game!

All of my code and assets in this demo, excepting the guest ghosts and their assets, are released under a GPL-v3.0 license. You can find the code at http://github.com/shadybug/lavender-hollow. Share your work so that we can all learn from each other!

Thanks for playing![/center]"
text = "A game by shadybug

Special thanks for guest ghosts:
Revenorror - Qyllia's ghost
Andrea M. - Logan's ghost

Doorway model, fence model, and most environment tiles from Kenney.nl

Font - Kasuki Hand Normal by Alejandro Zapata

Godot-Ink plugin by Paul Joannon

And, of course, thanks to Inkle and the Godot Team for creating the tools I used to make this game!

All of my code and assets in this demo, excepting the guest ghosts and their assets, are released under a GPL-v3.0 license. You can find the code at http://github.com/shadybug/lavender-hollow. Share your work so that we can all learn from each other!

Thanks for playing!"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
margin_top = 479.0
margin_right = 900.0
margin_bottom = 505.0
rect_min_size = Vector2( 250, 0 )
text = "Back"
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
